--- a/Oesebus.EVS.KafkaService.Application.Host/Oesebus.EVS.KafkaService.Application.Host.csproj
+++ b/Oesebus.EVS.KafkaService.Application.Host/Oesebus.EVS.KafkaService.Application.Host.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
 
   </PropertyGroup>
 
@@ -25,8 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Oesebus.Payment.Application.Core\Oesebus.EVS.KafkaService.Application.Core.csproj" />
-    <ProjectReference Include="..\Oesebus.Payment.Infrastructue\Oesebus.EVS.KafkaService.Infrastructure.csproj" />
+    <ProjectReference Include="..\Oesebus.EVS.KafkaService.Application.Core\Oesebus.EVS.KafkaService.Application.Core.csproj" />
+    <ProjectReference Include="..\Oesebus.EVS.KafkaService.Domain\Oesebus.EVS.KafkaService.Domain.csproj" />
+    <ProjectReference Include="..\Oesebus.EVS.KafkaService.Infrastructure\Oesebus.EVS.KafkaService.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
